frontend/test/should_fail/del_of_exec.grg
rule r1
{
	x:Node;
	
	replace {
	---
		exec(t(x)); // references appearing only after --- don't cause insertion to RHS, thus are deleted in delete mode
	}
}

test t(n:Node)
{
}
